Added image gallery

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     <div ui-view="about"></div>
     <div ui-view="gallery"></div>
 
-    <footer id="footer" class="clearfix">
+    <!--<footer id="footer" class="clearfix">
         <div ui-view="footer"></div>
-    </footer>
+    </footer>-->
 
     <!-- JS Files [Start]-->
     <script src="vendors/jquery/jquery-3.2.1.min.js"></script>
