--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- CSS Files [Start] -->
     <link rel="icon" type="image/png" href="css/images/machinser.png">
-    <link href="https://fonts.googleapis.com/css?family=Michroma" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Michroma" rel="stylesheet"> -->
     <link href="js/vendors/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="js/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="js/vendors/angular/angular-bootstrap-lightbox.css" rel="stylesheet">
@@ -64,7 +64,7 @@
                     <div class="col-md-5 col-sm-6">
                         <h5>Connect</h5>
                         <ul class="connect">
-                            <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://www.facebook.com/faisalbabu.neelambra" target="_blank"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                             <li><a href="#" target="_blank"><i class="fa fa-youtube-play"></i></a></li>
@@ -107,7 +107,7 @@
         </footer>
 
         <!-- JS Files [Start]-->
-        <script src="js/vendors/require/require.js" data-main="js/main.js"></script>
+        <script src="js/vendors/require/require.min.js" data-main="js/main.js"></script>
         <!--<script src="vendors/bootstrap/js/bootstrap.min.js"></script>-->
         <!-- JS Files [End]-->
     </div>
